Sugati/src/objects/Payment_Gateway__mdt.object
<CustomObject>
    <fields>
        <fullName>Checkout_Public_Key__c</fullName>
        <label>Checkout Public Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Point_Url__c</fullName>
        <label>End Point Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Payment_Gateway_Name__c</fullName>
        <label>Payment Gateway Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sagepay_Vendor__c</fullName>
        <label>Sagepay Vendor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Payment Gateway</label>
    <pluralLabel>Payment Gateways</pluralLabel>
</CustomObject>